<resources>
    <string name="app_name">scan4pase</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- List Product -->
    <string name="list_product_sku">%1$s (%2$s)</string>
    <string name="list_product_name">Nutrilite Double X® Vitamin/Mineral/Phytonutrient Supplement – 31-day supply with 3-compartment case</string>
    <string name="list_product_ibocost_label">IBO:</string>
    <string name="list_product_retailcost_label">Retail:</string>
    <string name="list_product_pvbv_label">PV/BV:</string>
    <string name="list_product_ibocost">$25</string>
    <string name="list_product_retialcost">$400</string>
    <string name="list_product_pvbv">%1$s / %2$s</string>

    <!-- Cart Fragment -->
    <string name="fragment_cart_pvbvtotal_label">PV / BV Total :</string>
    <string name="fragment_cart_subtotal_label">Subtotal (IBO / Retail) :</string>
    <string name="fragment_cart_grandTotal_label">Grand Total (IBO / Retail) :</string>
    <string name="fragment_cart_pvbvtotal">0.00 / 0.00</string>
    <string name="fragment_cart_subtotal">$0.00 / $0.00</string>
    <string name="fragment_cart_grandTotal">$0.00 / $0.00</string>
    <string name="fragment_cart_createInvoice_btn">CREATE INVOICE</string>
    <string name="fragment_cart_emptyCart">No products in cart.</string>

    <string name="action_add_product">+</string>

    <!-- Preferences -->
    <string name="pref_tax_percentage">Tax Percentage</string>
    <string name="pref_tax_percentage_sum">Edit this value based on your local area\'s tax laws.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_add_product">AddProduct</string>

</resources>
